--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' https://isitup.org https://cdnjs.buymeacoffee.com; 
+    script-src 'self' 'unsafe-inline' https://isitup.org https://cdnjs.buymeacoffee.com; 
     connect-src https://isitup.org;
     style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
-    font-src 'self' https://cdnjs.cloudflare.com;
-  ">
+    font-src 'self' https://cdnjs.cloudflare.com;">
+
 
   <!-- FontAwesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
