--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <!-- Content Security Policy -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' 'unsafe-inline' https://isitup.org https://cdnjs.buymeacoffee.com; 
-    connect-src https://isitup.org;
+    script-src 'self' 'unsafe-inline' https://api.allorigins.win https://cdnjs.buymeacoffee.com; 
+    connect-src https://api.allorigins.win;
     style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
-    font-src 'self' https://cdnjs.cloudflare.com;">
-
+    font-src 'self' https://cdnjs.cloudflare.com;
+  ">
 
   <!-- FontAwesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
@@ -23,7 +23,7 @@
     body { font-family: Arial, sans-serif; background: var(--bg); color: var(--text); margin:0; padding:1rem; display:flex; flex-direction:column; align-items:center; }
     h1 { margin-bottom:0.5rem; }
     #hint { margin:0 0 1rem; font-style:italic; color:#6c757d; }
-    select,input,button { font-size:1rem; padding:0.5rem; margin:0.5rem 0; }
+    select, input, button { font-size:1rem; padding:0.5rem; margin:0.5rem 0; }
     button { background: var(--primary); border:none; color:#fff; border-radius:4px; cursor:pointer; }
     button:disabled { opacity:0.6; cursor:not-allowed; }
     .result-card { margin-top:1rem; padding:1rem; border-radius:6px; color:#fff; display:none; align-items:center; justify-content:center; gap:0.5rem; width:100%; max-width:400px; animation:fadeIn 0.3s ease-in-out; }
@@ -39,7 +39,7 @@
   <div class="ad-slot">Your Google AdSense Top Banner Here</div>
 
   <h1>Live or Dead</h1>
-  <p id="hint">Type a URL below to see if it is live or dead.</p>
+  <p id="hint">Type a URL below to check if it is up or down.</p>
 
   <select id="langSelect">
     <option value="en">English</option>
@@ -62,18 +62,14 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      // Suppress uncaught errors
-      window.onerror = () => true;
-
-      // Data for localization
+      // Localization data
       const data = {
-        en: { hint:'Type a URL below to see if it is live or dead.', check:'Check', invalid:'Invalid hostname.', placeholder:'e.g. example.com', up:'is UP', down:'is DOWN', network:'Network error.' },
+        en: { hint:'Type a URL below to check if it is up or down.', check:'Check', invalid:'Invalid hostname.', placeholder:'e.g. example.com', up:'is UP', down:'is DOWN', network:'Network error.' },
         pt: { hint:'Digite uma URL abaixo para verificar se ela está online ou offline.', check:'Checar', invalid:'Host inválido.', placeholder:'ex: exemplo.com', up:'está UP', down:'está DOWN', network:'Erro de rede.' },
         es: { hint:'Escriba una URL abajo para verificar si está en línea o sin conexión.', check:'Comprobar', invalid:'Host inválido.', placeholder:'ej: ejemplo.com', up:'está UP', down:'está DOWN', network:'Error de red.' },
         fr: { hint:'Entrez une URL ci-dessous pour vérifier si elle est en ligne ou hors ligne.', check:'Vérifier', invalid:'Nom d’hôte non valide.', placeholder:'ex: exemple.com', up:'est UP', down:'est DOWN', network:'Erreur réseau.' }
       };
 
-      // Elements
       const sel = document.getElementById('langSelect');
       const btn = document.getElementById('checkBtn');
       const input = document.getElementById('siteUrl');
@@ -89,7 +85,6 @@
                       : 'en';
       sel.value = currentLang;
 
-      // Localization function
       function updateUI() {
         const cfg = data[currentLang];
         hintEl.textContent = cfg.hint;
@@ -98,18 +93,11 @@
         msg.textContent = cfg.check + '…';
       }
 
-      // Host validation
       function isValidHost(h) {
         return /^[a-zA-Z0-9\.\-]+(:\d+)?$/.test(h);
       }
 
-      // Language change
-      sel.addEventListener('change', function() {
-        currentLang = sel.value;
-        updateUI();
-      });
-
-      // Initial UI update
+      sel.addEventListener('change', () => { currentLang = sel.value; updateUI(); });
       updateUI();
 
       // Inject BuyMeACoffee widget
@@ -130,24 +118,28 @@
         document.getElementById('bmcContainer').appendChild(s);
       })();
 
-      // Check URL
       let busy = false;
-      btn.addEventListener('click', async function() {
-        if (busy) return;
+      btn.addEventListener('click', async () => {
+        if(busy) return;
         busy = true;
         setTimeout(() => busy = false, 2000);
+
         const cfg = data[currentLang];
         const raw = input.value.trim();
-        if (!isValidHost(raw)) { alert(cfg.invalid); return; }
+        if(!isValidHost(raw)) { alert(cfg.invalid); return; }
         const site = raw.startsWith('http') ? raw : 'https://' + raw;
+
         card.style.display = 'flex';
         card.classList.remove('up','down');
         icon.className = 'fa-solid fa-spinner fa-spin';
         msg.textContent = cfg.check + '…';
+
+        // Use AllOrigins proxy to bypass CORS
+        const proxyUrl = 'https://api.allorigins.win/raw?url=' + encodeURIComponent('https://isitup.org/' + site + '.json');
         try {
-          const res = await fetch('https://isitup.org/' + encodeURIComponent(site) + '.json');
+          const res = await fetch(proxyUrl);
           const d = await res.json();
-          if (d.status_code === 1) {
+          if(d.status_code === 1) {
             card.classList.add('up');
             icon.className = 'fa-solid fa-circle-check';
             msg.textContent = site + ' ' + cfg.up + ' (' + Math.round(d.response_time) + ' ms)';
