--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <!-- FontAwesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 
+  <!-- Google AdSense top-level script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9273959048665563" crossorigin="anonymous"></script>
+
   <style>
     :root { --primary: #007BFF; --up: #28a745; --down: #dc3545; --bg: #f8f9fa; --text: #212529; }
     * { box-sizing: border-box; }
@@ -134,12 +137,13 @@
         icon.className = 'fa-solid fa-spinner fa-spin';
         msg.textContent = cfg.check + '…';
 
-        // Use AllOrigins proxy to bypass CORS
-        const proxyUrl = 'https://api.allorigins.win/raw?url=' + encodeURIComponent('https://isitup.org/' + site + '.json');
+                // Use AllOrigins proxy to bypass CORS
+        const proxyUrl = 'https://api.allorigins.win/get?url=' + encodeURIComponent('https://isitup.org/' + site + '.json');
         try {
           const res = await fetch(proxyUrl);
-          const d = await res.json();
-          if(d.status_code === 1) {
+          const wrapper = await res.json();
+          const d = JSON.parse(wrapper.contents);
+          if (d.status_code === 1) {
             card.classList.add('up');
             icon.className = 'fa-solid fa-circle-check';
             msg.textContent = site + ' ' + cfg.up + ' (' + Math.round(d.response_time) + ' ms)';
@@ -148,7 +152,7 @@
             icon.className = 'fa-solid fa-circle-xmark';
             msg.textContent = site + ' ' + cfg.down;
           }
-        } catch {
+        } catch (e) {
           card.classList.add('down');
           icon.className = 'fa-solid fa-triangle-exclamation';
           msg.textContent = cfg.network;
