--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <!-- 1) CSP -->
   <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
-  script-src  'self' 'unsafe-inline' https://pagead2.googlesyndication.com;
-  connect-src 'self' https://ep1.adtrafficquality.google;
-  frame-src   https://pagead2.googlesyndication.com;
-  style-src   'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
-  font-src    'self' https://cdnjs.cloudflare.com;
+  script-src 'self' 'unsafe-inline'
+    https://pagead2.googlesyndication.com
+    https://ep2.adtrafficquality.google;
+  connect-src 'self' https://ep2.adtrafficquality.google;
+  frame-src https://pagead2.googlesyndication.com;
+  style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
+  font-src 'self' https://cdnjs.cloudflare.com;
 ">
+
 
 
   <!-- 2) AdSense Loader Global -->
