--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   default-src 'self';
   script-src 'self' 'unsafe-inline'
     https://pagead2.googlesyndication.com
+    https://ep1.adtrafficquality.google
     https://ep2.adtrafficquality.google;
-  connect-src 'self' https://ep2.adtrafficquality.google;
-  frame-src https://pagead2.googlesyndication.com;
+  connect-src 'self'
+    https://ep1.adtrafficquality.google
+    https://ep2.adtrafficquality.google;
+  frame-src 'self' https://pagead2.googlesyndication.com;
   style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
   font-src 'self' https://cdnjs.cloudflare.com;
 ">
-
-
 
   <!-- 2) AdSense Loader Global -->
   <script async
