--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
   connect-src 'self'
     https://ep1.adtrafficquality.google
     https://ep2.adtrafficquality.google;
-  style-src 'self' 'unsafe-inline'
-    https://cdnjs.cloudflare.com;
-  font-src 'self'
-    https://cdnjs.cloudflare.com;
   frame-src 'self'
-    https://pagead2.googlesyndication.com;
+    https://pagead2.googlesyndication.com
+    https://ep1.adtrafficquality.google
+    https://ep2.adtrafficquality.google;
+  style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
+  font-src 'self' https://cdnjs.cloudflare.com;
   object-src 'none';
   base-uri 'self';
   form-action 'self';
 ">
+
 
 
   <!-- 2) AdSense Loader Global -->
