--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
     https://pagead2.googlesyndication.com
     https://ep1.adtrafficquality.google
     https://ep2.adtrafficquality.google;
-  style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
-  font-src 'self' https://cdnjs.cloudflare.com;
+  style-src 'self' 'unsafe-inline'
+    https://cdnjs.cloudflare.com;
+  font-src 'self'
+    https://cdnjs.cloudflare.com;
+  img-src 'self' data:
+    https://ep1.adtrafficquality.google
+    https://ep2.adtrafficquality.google;
   object-src 'none';
   base-uri 'self';
   form-action 'self';
 ">
+
 
 
 
