--- a/index.html
+++ b/index.html
@@ -9,29 +9,28 @@
   default-src 'self';
   script-src 'self' 'unsafe-inline'
     https://pagead2.googlesyndication.com
-    https://ep1.adtrafficquality.google
-    https://ep2.adtrafficquality.google;
+    https://*.googlesyndication.com
+    https://*.adtrafficquality.google;
   connect-src 'self'
-    https://ep1.adtrafficquality.google
-    https://ep2.adtrafficquality.google;
-  frame-src 'self'
-    https://pagead2.googlesyndication.com
-    https://ep1.adtrafficquality.google
-    https://ep2.adtrafficquality.google;
+    https://*.adtrafficquality.google
+    https://pagead2.googlesyndication.com;
   style-src 'self' 'unsafe-inline'
     https://cdnjs.cloudflare.com;
   font-src 'self'
     https://cdnjs.cloudflare.com;
+  frame-src 'self'
+    https://pagead2.googlesyndication.com
+    https://*.adtrafficquality.google;
+  fenced-frame-src 'self'
+    https://pagead2.googlesyndication.com
+    https://*.adtrafficquality.google;
   img-src 'self' data:
-    https://ep1.adtrafficquality.google
-    https://ep2.adtrafficquality.google;
+    https://*.googlesyndication.com
+    https://*.adtrafficquality.google;
   object-src 'none';
   base-uri 'self';
   form-action 'self';
 ">
-
-
-
 
   <!-- 2) AdSense Loader Global -->
   <script async
